completed core
